# webgpu-basics

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md
build-dawn/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  basic-webgpu-app.sln  basic-webgpu-app.vcxproj  basic-webgpu-app.vcxproj.filters  cmake_install.cmake
resources/: shader.wgsl
src/: main.cpp  precomp.h  tiny_obj_loader.h
src/app/: app.cpp  app.h
src/util/: resource-manager.cpp  resource-manager.h  stb_image.h
